--- a/posts/2016-10-07-styx-0.1.0-released.md
+++ b/posts/2016-10-07-styx-0.1.0-released.md
@@ -20,7 +20,7 @@ $ nix-env -i $(nix-build https://github.com/ericsagnes/styx/archive/0.1.0.tar.gz
 $ styx --help
 ```
 
-Learn more in the [Styx 0.1.0 Documentation](https://styx-static.github.io/styx-site/documentation-v0-1-0.html).
+Learn more in the [Styx 0.1.0 Documentation](@conf.siteUrl@/documentation-v0-1-0.html).
 
 If you want to contribute to Styx, please join the [GitHub repository](https://github.com/styx-static/styx/).
 
