updated to Styx 0.3.0

--- a/posts/2016-10-10-styx-0.2.0-released.md
+++ b/posts/2016-10-10-styx-0.2.0-released.md
@@ -1,5 +1,5 @@
 {---
-{ title = "Styx 0.2.0 released"; }
+  title = "Styx 0.2.0 released";
 ---}
 
 
@@ -10,9 +10,9 @@ Highlights:
 - Content substitutions
 - Themes
 
-Detailed [release notes](@conf.siteUrl@/documentation-v0-2-0.html#_release_notes).
+Detailed [release notes](@siteUrl@/documentation-v0-2-0.html#_release_notes).
 
-Learn more in the [Styx 0.2.0 Documentation](@conf.siteUrl@/documentation-v0-2-0.html).
+Learn more in the [Styx 0.2.0 Documentation](@siteUrl@/documentation-v0-2-0.html).
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
