--- a/posts/2016-10-29-styx-0.3.1-released.md
+++ b/posts/2016-10-29-styx-0.3.1-released.md
@@ -8,7 +8,7 @@ This release contains the following bug fixes:
 - `styx server` and `styx preview` command `--site-url` flag handling
 - `styx --help` fix
 
-Learn more in the [Styx 0.3.1 Documentation](@siteUrl@/documentation-v0-3-1.html).
+Learn more in the [Styx 0.3.1 Documentation](@doc.v0.3.1@).
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
