--- a/posts/2016-12-07-styx-0.4.0-released.md
+++ b/posts/2016-12-07-styx-0.4.0-released.md
@@ -4,7 +4,7 @@ title = "Styx 0.4.0 released";
 
 Highlights:
 
-- Better integration with the <<NixOps,Nix ecosystem>>, styx sites can be called from nix expressions with `callPackage`
+- Better integration with the Nix ecosystem, styx sites can be called from nix expressions with `callPackage`
 - Themes can be used from the `styx-themes` set of packages
 - new `manual` subcommand to open the HTML documentation in a browser
 
@@ -14,7 +14,7 @@ Breaking Changes
 - `site.nix` init section was refactored
 
 
-Learn more in the [Styx 0.4.0 Documentation](@siteUrl@/documentation-v0-4-0.html).
+Learn more in the [Styx 0.4.0 Documentation](@doc.v0.4.0@).
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
