--- a/posts/2016-10-26-styx-0.3.0-released.md
+++ b/posts/2016-10-26-styx-0.3.0-released.md
@@ -14,9 +14,9 @@ Highlights:
 - Multipages
 - Easier updates
 
-Detailed [release notes](@siteUrl@/documentation-v0-3-0.html#_release_notes).
+Detailed [release notes](@doc.v0.3.0@#_release_notes).
 
-Learn more in the [Styx 0.3.0 Documentation](@siteUrl@/documentation-v0-3-0.html).
+Learn more in the [Styx 0.3.0 Documentation](@doc.v0.3.0@).
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
