--- a/posts/2016-10-07-styx-0.1.0-released.md
+++ b/posts/2016-10-07-styx-0.1.0-released.md
@@ -1,5 +1,7 @@
 {---
-  title = "Styx 0.1.0 released";
+title = "Styx ${version} released";
+version = "0.1.0";
+release = "v${version}";
 ---}
 
 First release of Styx!
@@ -20,7 +22,8 @@ $ nix-env -i $(nix-build https://github.com/ericsagnes/styx/archive/0.1.0.tar.gz
 $ styx --help
 ```
 
-Learn more in the [Styx 0.1.0 Documentation](@doc.v0.1.0@).
+Learn more in the {{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html"; content = "Styx {{ version }} Documentation"; } }},
+{{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html#_release_notes"; content = "release notes"; } }}.
 
 If you want to contribute to Styx, please join the [GitHub repository](https://github.com/styx-static/styx/).
 
