--- a/posts/2016-10-26-styx-0.3.0-released.md
+++ b/posts/2016-10-26-styx-0.3.0-released.md
@@ -1,5 +1,7 @@
 {---
-title = "Styx 0.3.0 released";
+title = "Styx ${version} released";
+version = "0.3.0";
+release = "v${version}";
 ---}
 
 
@@ -14,9 +16,8 @@ Highlights:
 - Multipages
 - Easier updates
 
-Detailed [release notes](@doc.v0.3.0@#_release_notes).
-
-Learn more in the [Styx 0.3.0 Documentation](@doc.v0.3.0@).
+Learn more in the {{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html"; content = "Styx {{ version }} Documentation"; } }},
+{{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html#_release_notes"; content = "release notes"; } }}.
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
