--- a/posts/2016-10-29-styx-0.3.1-released.md
+++ b/posts/2016-10-29-styx-0.3.1-released.md
@@ -1,17 +1,18 @@
 {---
-title = "Styx 0.3.1 released";
+title = "Styx ${version} released";
+version = "0.3.1";
+release = "v${version}";
 ---}
-
 
 This release contains the following bug fixes:
 
 - `styx server` and `styx preview` command `--site-url` flag handling
 - `styx --help` fix
 
-Learn more in the [Styx 0.3.1 Documentation](@doc.v0.3.1@).
+Learn more in the {{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html"; content = "Styx {{ version }} Documentation"; } }},
+{{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html#_release_notes"; content = "release notes"; } }}.
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
 Problems and bugs should be reported to the [issue tracker](https://github.com/styx-static/styx/issues).
-
 
