--- a/posts/2016-12-07-styx-0.4.0-released.md
+++ b/posts/2016-12-07-styx-0.4.0-released.md
@@ -1,5 +1,7 @@
 {---
-title = "Styx 0.4.0 released";
+title = "Styx ${version} released";
+version = "0.4.0";
+release = "v${version}";
 ---}
 
 Highlights:
@@ -13,8 +15,8 @@ Breaking Changes
 - Removal of the `state` variable in `site.nix`
 - `site.nix` init section was refactored
 
-
-Learn more in the [Styx 0.4.0 Documentation](@doc.v0.4.0@).
+Learn more in the {{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html"; content = "Styx {{ version }} Documentation"; } }},
+{{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html#_release_notes"; content = "release notes"; } }}.
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
