--- a/posts/2017-01-19-styx-0.5.0-released.md
+++ b/posts/2017-01-19-styx-0.5.0-released.md
@@ -1,5 +1,7 @@
 {---
-title = "Styx 0.5.0 released";
+title = "Styx ${version} released";
+version = "0.5.0";
+release = "v${version}";
 ---}
 
 
@@ -45,7 +47,7 @@ $ nix-shell -p styx -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive
 Installing:
 
 ```
-$ nix-env -A styx -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixpkgs-unstable-small.tar.gz
+$ nix-env -A styx -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixpkgs-unstable.tar.gz
 ```
 
 Note that the `build`, `preview`, `live`, `serve` and `deploy` commands require system active `nixpkgs` to provide the same version of styx as the one used, 0.5.0.  
@@ -57,7 +59,8 @@ $ styx preview -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixp
 
 ---
 
-Learn more in the [Styx 0.5.0 Documentation](@doc.v0.5.0@), [release notes](@doc.v0.5.0@#v0.5.0).
+Learn more in the {{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html"; content = "Styx {{ version }} Documentation"; } }},
+{{ with meta; templates.tag.ilink { to = data.doc."{{ release }}" + "index.html#{{ release }}"; content = "release notes"; } }}.
 
 Contribute to Styx via [GitHub repository](https://github.com/styx-static/styx/).
 
