Styx 1.0.0-dev pre-release

--- a/posts/2016-10-29-styx-0.3.1-released.md
+++ b/posts/2016-10-29-styx-0.3.1-released.md
@@ -1,8 +1,8 @@
-{---
-title = "Styx ${version} released";
-version = "0.3.1";
-release = "v${version}";
----}
+---
+title: "Styx ${version} released"
+version: "0.3.1"
+release: "v${version}"
+---
 
 This release contains the following bug fixes:
 
