--- a/posts/2016-10-07-styx-0.1.0-released.md
+++ b/posts/2016-10-07-styx-0.1.0-released.md
@@ -1,8 +1,8 @@
-{---
-title = "Styx ${version} released";
-version = "0.1.0";
-release = "v${version}";
----}
+---
+title: "Styx ${version} released"
+version: "0.1.0"
+release: "v${version}"
+---
 
 First release of Styx!
 
