--- a/posts/2016-10-10-styx-0.2.0-released.md
+++ b/posts/2016-10-10-styx-0.2.0-released.md
@@ -1,8 +1,8 @@
-{---
-title = "Styx ${version} released";
-version = "0.2.0";
-release = "v${version}";
----}
+---
+title: "Styx ${version} released"
+version: "0.2.0"
+release: "v${version}"
+---
 
 
 Highlights:
