--- a/posts/2017-02-28-styx-0.6.0-released.adoc
+++ b/posts/2017-02-28-styx-0.6.0-released.adoc
@@ -1,8 +1,8 @@
-{---
-title = "Styx ${version} released";
-version = "0.6.0";
-release = "v${version}";
----}
+---
+title: "Styx ${version} released"
+version: "0.6.0"
+release: "v${version}"
+---
 
 == Highlights
 
