--- a/posts/2017-09-02-styx-0.7.0-released.adoc
+++ b/posts/2017-09-02-styx-0.7.0-released.adoc
@@ -1,8 +1,8 @@
-{---
-title = "Styx ${version} released";
-version = "0.7.0";
-release = "v${version}";
----}
+---
+title: "Styx ${version} released"
+version: "0.7.0"
+release: "v${version}"
+---
 
 :leveloffset: -2
 
